--- a/02-todo/server/tasks.json
+++ b/02-todo/server/tasks.json
@@ -1,1 +1,1 @@
-[]
+[{"id":2,"title":"Spela Hitman 3","description":"","dueDate":"2022-12-07","completed":false},{"id":3,"title":"Diska","description":"","dueDate":"2022-12-14","completed":false},{"id":4,"title":"Lägga till en task","description":"","dueDate":"2022-12-22","completed":false}]
